# src/Dfe.PersonsApi.Application/Common/Models/AcademyGovernance.cs
@@ -4,5 +4,7 @@
     {
         public string? UKPRN { get; set; }
         public int? URN { get; set; }
+        public string? DateOfAppointment { get; set; }
+        public string? DateTermOfOfficeEndsEnded { get; set; }
     }
 }
