# src/Dfe.PersonsApi.Application/MappingProfiles/AcademyWithGovernanceProfile.cs
@@ -15,7 +15,9 @@ namespace Dfe.PersonsApi.Application.MappingProfiles
                 .ForMember(dest => dest.DisplayName, opt => opt.MapFrom(src => $"{src.EducationEstablishmentGovernance.Forename1} {src.EducationEstablishmentGovernance.Surname}"))
                 .ForMember(dest => dest.DisplayNameWithTitle, opt => opt.MapFrom(src => $"{src.EducationEstablishmentGovernance.Title} {src.EducationEstablishmentGovernance.Forename1} {src.EducationEstablishmentGovernance.Surname}"))
                 .ForMember(dest => dest.Roles, opt => opt.MapFrom(src => new List<string?> { src.GovernanceRoleType.Name }))
-                .ForMember(dest => dest.UpdatedAt, opt => opt.MapFrom(src => src.EducationEstablishmentGovernance.Modified));
+                .ForMember(dest => dest.UpdatedAt, opt => opt.MapFrom(src => src.EducationEstablishmentGovernance.Modified))
+                .ForMember(dest => dest.DateOfAppointment, opt => opt.MapFrom(src => src.EducationEstablishmentGovernance.DateOfAppointment))
+                .ForMember(dest => dest.DateTermOfOfficeEndsEnded, opt => opt.MapFrom(src => src.EducationEstablishmentGovernance.DateTermOfOfficeEndsEnded));
         }
     }
 }
